--- a/map/package.json
+++ b/map/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "watch": "vite build --watch"
   },
   "devDependencies": {
     "vite": "^3.0.9"
