--- a/website/package.json
+++ b/website/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "eleventy --serve",
     "build": "eleventy"
   },
   "keywords": [],
