--- a/map/package.json
+++ b/map/package.json
@@ -10,8 +10,11 @@
     "vite": "^3.0.9"
   },
   "dependencies": {
+    "@sindresorhus/slugify": "^2.1.1",
+    "@sveltejs/vite-plugin-svelte": "^1.3.1",
     "ol": "latest",
     "ol-layerswitcher": "^4.1.0",
-    "ol-popup": "^5.0.0"
+    "ol-popup": "^5.0.0",
+    "svelte": "^3.53.1"
   }
 }
