--- a/website/package.json
+++ b/website/package.json
@@ -8,5 +8,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
     "eleventy-plugin-i18n": "^0.1.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
