--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Astun Technology Ltd.",
   "license": "MIT",
   "homepage": "https://bitbucket.org/astuntech/paths-to-wellbeing#readme",
-  "dependencies": {},
+  "dependencies": {
+    "nvm": "0.0.4"
+  },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   }
