--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "author": "Astun Technology Ltd.",
   "license": "MIT",
   "homepage": "https://bitbucket.org/astuntech/paths-to-wellbeing#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   }
