--- a/map/package.json
+++ b/map/package.json
@@ -16,6 +16,7 @@
     "ol-layerswitcher": "^4.1.0",
     "ol-popup": "^5.0.0",
     "path": "^0.12.7",
+    "simple-svelte-autocomplete": "^2.5.1",
     "svelte": "^3.53.1"
   }
 }
