--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://bitbucket.org/astuntech/paths-to-wellbeing#readme",
   "dependencies": {},
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.0"
   }
 }
