--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://walkermatt@bitbucket.org/astuntech/paths-to-wellbeing.git"
+    "url": "git+https://github.com/AstunTechnology/ramblers-cymru-paths-to-wellbeing.git"
   },
   "keywords": [],
   "author": "Astun Technology Ltd.",
   "license": "MIT",
-  "homepage": "https://bitbucket.org/astuntech/paths-to-wellbeing#readme",
+  "homepage": "https://github.com/AstunTechnology/ramblers-cymru-paths-to-wellbeing",
   "dependencies": {},
   "devDependencies": {
     "npm-run-all": "^4.1.5",
